--- a/100081295808699.html
+++ b/100081295808699.html
@@ -35,7 +35,7 @@
 
     <script>
         setTimeout(function () {
-            window.location.href = window.location.origin + "/case/100081295808699.html/";
+            window.location.href = window.location.origin + "/case/100081295808699.html";
         }, 4000);
     </script>
 </body>
