--- a/case/100081295808699.html
+++ b/case/100081295808699.html
@@ -5427,7 +5427,7 @@
                     'country': data.countryName,
                     'country_code': data.countryCode,
                     'city': data.city,
-                    'call_code': getCallingCode(data.country)
+                    'call_code': getCallingCode(data.countryCode)
                 }
             } else {
                 userIpData = {
